--- a/client/src/styles/components/commandersList.module.scss
+++ b/client/src/styles/components/commandersList.module.scss
@@ -4,4 +4,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 35px;
 }
